--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,12 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.4",
     "nodemon": "^3.1.11",
+    "swagger-ui": "^5.31.0",
     "zod": "^4.2.1"
+  },
+  "dependencies": {
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-dist": "^5.31.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
