--- a/backend/package.json
+++ b/backend/package.json
@@ -16,17 +16,28 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "firebase": "^12.7.0",
+    "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.20.4",
+    "mongoose": "^8.22.0",
     "nodemon": "^3.1.11",
     "swagger-ui": "^5.31.0",
-    "zod": "^4.2.1"
+    "zod": "^4.3.6"
   },
   "dependencies": {
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^5.31.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.22.0",
+    "nodemon": "^3.1.11",
+    "swagger-ui": "^5.31.0",
+    "zod": "^4.3.6"
   }
 }
