--- a/backend/package.json
+++ b/backend/package.json
@@ -12,17 +12,7 @@
     "dev": "nodemon src/index.js"
   },
   "devDependencies": {
-    "bcryptjs": "^3.0.3",
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "firebase": "^12.8.0",
-    "firebase-admin": "^13.6.0",
-    "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.22.0",
-    "nodemon": "^3.1.11",
-    "swagger-ui": "^5.31.0",
-    "zod": "^4.3.6"
+    "nodemon": "^3.1.11"
   },
   "dependencies": {
     "swagger-jsdoc": "^6.2.8",
