--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,7 @@
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.12.0",
-    "tailwindcss": "^4.1.18"
-  },
-  "devDependencies": {
+    "tailwindcss": "^4.1.18",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -30,4 +28,4 @@
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
-}
+  }
