--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests",
     "dev": "nodemon src/index.js"
+
   },
   "devDependencies": {
+    "jest": "^30.2.0",
     "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-dist": "^5.31.0",
-    "swagger-ui-express": "^5.0.1",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -27,7 +26,10 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.22.0",
     "nodemon": "^3.1.11",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui": "^5.31.0",
+    "swagger-ui-dist": "^5.31.0",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.3.6"
   }
 }
